add hero images, environment configurations, and hero-related components

--- a/src/app/heroes/pages/layout-page/layout-page.component.html
+++ b/src/app/heroes/pages/layout-page/layout-page.component.html
@@ -1,4 +1,5 @@
 <mat-sidenav-container fullscreen>
+
   <mat-sidenav #sidenav mode="push" [ngStyle]="{ width: '250px' }">
     <mat-toolbar>
       <span>Menú</span>
@@ -6,6 +7,7 @@
       <button mat-icon-button (click)="sidenav.toggle()">
         <mat-icon>menu</mat-icon>
       </button>
+
     </mat-toolbar>
 
     <mat-nav-list>
@@ -18,7 +20,9 @@
         {{ item.label }}
       </mat-list-item>
     </mat-nav-list>
+
   </mat-sidenav>
+
 
   <mat-toolbar color="primary">
     <button mat-icon-button (click)="sidenav.toggle()">
@@ -27,10 +31,21 @@
 
     <span class="spacer"></span>
 
-    <button mat-button>Logout</button>
+    <button mat-button>
+      Logout
+    </button>
+
   </mat-toolbar>
 
-  <div class="container">
+
+  <div class="container p-2">
+
     <router-outlet></router-outlet>
+
   </div>
+
 </mat-sidenav-container>
+
+
+
+
